# TAMUctf-2021

./: Makefile  README.md
crypto/basicRSA/: README.md  challenge.py  problem.json
crypto/ciphper/: README.md  challenge.py  problem.json
crypto/encoding/: README.md  challenge.py  problem.json
crypto/pwgen/: Cargo.toml  Dockerfile  Makefile  challenge.py  flag.txt  password  problem.json  pwgen.py  readme.md
crypto/ringOfFire/: README.md  challenge.py  problem.json
forensics/recovery/: README.md  challenge.py  problem.json
forensics/unzip/: README.md  challenge.py  problem.json
forensics/volatile-personality/: .gitignore  README.md  challenge.py  problem.json
misc/pybox/: Dockerfile  README.md  challenge.py  flag.txt  payload.txt  payload2.txt  problem.json
misc/pybox/restricted_python/: Cargo.toml
osint/archival/: README.md  challenge.py  problem.json
osint/elizabeth-is-missing/: README.md  challenge.py  problem.json
osint/marvel-vs-dc/: README.md  challenge.py  problem.json
pwn/calculator/: Dockerfile  Makefile  calculator.c  challenge.py  flag.txt  problem.json  readme.md  shellcode.s  solve.py
pwn/handshake/: Dockerfile  Dockerfile.build  Makefile  README.md  build.sh  challenge.py  flag.txt  handshake.c  problem.json  solution.py  solver.py
pwn/helpful-debugger/: Dockerfile  Makefile  challenge.py  exploit.c  problem.json  readme.md  runloop.sh
pwn/leaky/: Dockerfile  Makefile  README.md  challenge.py  flag.txt  flag_check.c  leaky.c  (+2 more)
web/beryllium/chrome-capture/: Cargo.toml  Dockerfile
web/beryllium/chrome-capture/src/: main.rs
web/beryllium/chrome-handler/: Cargo.toml  Dockerfile
web/beryllium/chrome-handler/src/: index.html  main.rs
web?/delfi/: Cargo.toml  Dockerfile  README.md  challenge.py  flag  problem.json
web?/delfi/src/: get_flag.rs
(+125 files in other folders)
