[package]
name = "restricted_python"
version = "0.1.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.11.1"
seccomp = "0.1.1"
libc = "0.2.76"
seccomp-sys = "0.1.3"