[package]
name = "chrome-capture"
version = "0.1.0"
authors = ["Addison Crump <addisoncrump@tamu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
tempfile = "3.1.0"
tokio = { version = "0.2", features = ["macros", "process"] }
warp = "0.2"
