[package]
name = "chrome-handler"
version = "0.1.0"
authors = ["Addison Crump <addisoncrump@tamu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full", "macros"] }
warp = "0.2"
